-#hero to #home -about us and community history ... go into about us section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="#hero">Home</a></li>
+          <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
           <!--<li><a href="#menu">Menu</a></li>-->
           <li><a href="#events">Events</a></li>
@@ -86,19 +86,27 @@
     </div>
   </header><!-- End Header -->
 
-  <!-- ======= Hero Section ======= -->
-  <section id="hero" class="hero d-flex align-items-center section-bg">
+  <!-- ======= Home Section ======= -->
+  <section id="home" class="hero d-flex align-items-center section-bg">
     <div class="container ">
       <div class="row justify-content-between gy-5 ">
         <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start">
           <h2 data-aos="fade-up">About masjid</h2>
-          <p data-aos="fade-up" data-aos-delay="100">Some information regards to masjid.</p>
+          <p data-aos="fade-up" data-aos-delay="100">
+              The Islamic Center of Frankfort (ICF) was
+              founded in 1998 as a welcoming place for
+              all Muslims. As our community has grown,
+              we purchased land to build Frankfort's
+              first purpose-built Masjid. To cover the
+              estimated $1.5 million construction costs,
+              we are seeking your support.
+          </p>
           <div class="d-flex d-none" data-aos="fade-up" data-aos-delay="200">
             <a href="#book-a-table" class="btn-book-a-table">Book a Table</a>
             <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
           </div>
         </div>
-        <div class="col-lg-5 order-1 order-lg-2 text-center text-lg-start m-top-1px">
+        <div class="col-lg-7 order-1 order-lg-2 text-center text-lg-start m-top-1px">
           <img src="assets/img/icf.jpg" class="img-fluid" alt="" data-aos="zoom-out" data-aos-delay="300">
         </div>
       </div>
@@ -125,19 +133,45 @@
           </div>-->
           <div class="d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
             <div class="content ps-0 ps-lg-5">
-              <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
-              </p>
-              <ul>
-                <li><i class="bi bi-check2-all"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="bi bi-check2-all"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="bi bi-check2-all"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-              </ul>
-              <p>
+                <p class="fst-italic">
+                    Frankfort, the capital of Kentucky is a
+                    small town with an estimated <b>40 Muslim families</b>. In 2002, the community
+                    purchased and renovated a rundown
+                    meat processing store to establish the
+                    Masjid, which now serves approximately
+                    <b>70 families</b> including those from nearby
+                    towns. However, the current building is
+                    <u>too old to renovate</u> and <u>lacks clean,
+                    functional bathroom and wadu facilities.</u>
+                    The existing small lot, with <u>only 13 parking
+                    spots</u>, cannot accommodate the growing
+                    needs of the community for a new Masjid.
+                </p>
+                <p class="fst-italic">
+                    Islamic Center of Frankfort receives
+                    special attention as it represents the
+                    Muslims at the capital. ICF actively
+                    participates and even leads the Kentucky
+                    Muslim activities in the capital,
+                    participates in many social and charitable
+                    activities, leads the interfaith initiatives,
+                    and regularly draws attention from the
+                    media.
+                </p>
+                <p class="fw-bold">
+                    Some of the activities currently held include:
+                </p>
+                <ul>
+                    <li><i class="bi bi-check2-all"></i> Daily and Jumaa Prayers</li>
+                    <li><i class="bi bi-check2-all"></i> Halaqas</li>
+                    <li><i class="bi bi-check2-all"></i> Community Dinners</li>
+                    <li><i class="bi bi-check2-all"></i> Taraweeh and Community Iftars</li>
+                    <li><i class="bi bi-check2-all"></i> Interfaith Programs</li>
+                </ul>
+              <!--<p>
                 Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
                 velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
-              </p>
+              </p>-->
 
               <div class="position-relative mt-4">
                 <img src="assets/img/Kentucky-state-capitol.jpg" class="img-fluid" alt="">
