updated gallery images

--- a/index.html
+++ b/index.html
@@ -983,14 +983,26 @@
 
               <div class="gallery-slider swiper">
                   <div class="swiper-wrapper align-items-center">
-                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/01.jpg"><img src="assets/img/gallery/01.jpg" class="img-fluid" alt=""></a></div>
-                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/02.jpg"><img src="assets/img/gallery/02.jpg" class="img-fluid" alt=""></a></div>
-                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/03.jpg"><img src="assets/img/gallery/03.jpg" class="img-fluid" alt=""></a></div>
-                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/04.jpg"><img src="assets/img/gallery/04.jpg" class="img-fluid" alt=""></a></div>
-                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/05.jpg"><img src="assets/img/gallery/05.jpg" class="img-fluid" alt=""></a></div>
-                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/06.jpg"><img src="assets/img/gallery/06.jpg" class="img-fluid" alt=""></a></div>
-                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/07.jpg"><img src="assets/img/gallery/07.jpg" class="img-fluid" alt=""></a></div>
-                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/08.jpg"><img src="assets/img/gallery/08.jpg" class="img-fluid" alt=""></a></div>
+                      <!--<div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/01.jpg"><img src="assets/img/gallery/01.jpg" class="img-fluid" alt=""></a></div>
+    <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/02.jpg"><img src="assets/img/gallery/02.jpg" class="img-fluid" alt=""></a></div>
+    <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/03.jpg"><img src="assets/img/gallery/03.jpg" class="img-fluid" alt=""></a></div>
+    <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/04.jpg"><img src="assets/img/gallery/04.jpg" class="img-fluid" alt=""></a></div>
+    <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/05.jpg"><img src="assets/img/gallery/05.jpg" class="img-fluid" alt=""></a></div>
+    <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/06.jpg"><img src="assets/img/gallery/06.jpg" class="img-fluid" alt=""></a></div>
+    <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/07.jpg"><img src="assets/img/gallery/07.jpg" class="img-fluid" alt=""></a></div>
+    <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/08.jpg"><img src="assets/img/gallery/08.jpg" class="img-fluid" alt=""></a></div>-->
+                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/eid_pics_icf/00.jpg"><img src="assets/img/eid_pics_icf/00.jpg" class="img-fluid" alt=""></a></div>
+                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/eid_pics_icf/01.jpg"><img src="assets/img/eid_pics_icf/01.jpg" class="img-fluid" alt=""></a></div>
+                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/eid_pics_icf/02.jpg"><img src="assets/img/eid_pics_icf/02.jpg" class="img-fluid" alt=""></a></div>
+                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/eid_pics_icf/03.jpg"><img src="assets/img/eid_pics_icf/03.jpg" class="img-fluid" alt=""></a></div>
+                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/eid_pics_icf/04.jpg"><img src="assets/img/eid_pics_icf/04.jpg" class="img-fluid" alt=""></a></div>
+                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/eid_pics_icf/05.jpg"><img src="assets/img/eid_pics_icf/05.jpg" class="img-fluid" alt=""></a></div>
+                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/eid_pics_icf/06.jpg"><img src="assets/img/eid_pics_icf/06.jpg" class="img-fluid" alt=""></a></div>
+                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/eid_pics_icf/07.jpg"><img src="assets/img/eid_pics_icf/07.jpg" class="img-fluid" alt=""></a></div>
+                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/eid_pics_icf/08.jpg"><img src="assets/img/eid_pics_icf/08.jpg" class="img-fluid" alt=""></a></div>
+                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/eid_pics_icf/09.jpg"><img src="assets/img/eid_pics_icf/09.jpg" class="img-fluid" alt=""></a></div>
+                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/eid_pics_icf/10.jpg"><img src="assets/img/eid_pics_icf/10.jpg" class="img-fluid" alt=""></a></div>
+                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/eid_pics_icf/11.jpg"><img src="assets/img/eid_pics_icf/11.jpg" class="img-fluid" alt=""></a></div>
                   </div>
                   <div class="swiper-pagination"></div>
               </div>
