added new mosque images just like gallery

--- a/index.html
+++ b/index.html
@@ -216,24 +216,34 @@
                               NEW BUILDING LAYOUT
                           </p>
                           <p class="fst-italic">
-                              The plan is to build a two-floor, 8,500 square foot building (basement and first floor). The Masjid will have a prayer 
-                              area that accommodates 200 people for Jumaa and includes library and an office. The basement will have storage area, 
-                              kitchen, and a community gathering area. The new location will have over 100 parking spaces, grassy play area and a 
+                              The plan is to build a two-floor, 8,500 square foot building (basement and first floor). The Masjid will have a prayer
+                              area that accommodates 200 people for Jumaa and includes library and an office. The basement will have storage area,
+                              kitchen, and a community gathering area. The new location will have over 100 parking spaces, grassy play area and a
                               picnic shelter for children and activities.
                           </p>
                           <!--<ul>
-                              <li><i class="bi bi-check2-all"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                              <li><i class="bi bi-check2-all"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                              <li><i class="bi bi-check2-all"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-                          </ul>
-                          <p>
-                              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
-                          </p>-->
+                    <li><i class="bi bi-check2-all"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                    <li><i class="bi bi-check2-all"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+                    <li><i class="bi bi-check2-all"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                </ul>
+                <p>
+                    Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                    velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
+                </p>-->
 
-                          
+
                       </div>
                   </div>
+              </div>
+
+              <div class="gallery-slider swiper pt-4">
+                  <div class="swiper-wrapper align-items-center">
+                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/icfnewmosqueviews/ICF_Musullah_NE.jpg"><img src="assets/img/icfnewmosqueviews/ICF_Musullah_NE.jpg" class="img-fluid" alt=""></a></div>
+                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/icfnewmosqueviews/ICF_Musullah_NW.jpg"><img src="assets/img/icfnewmosqueviews/ICF_Musullah_NW.jpg" class="img-fluid" alt=""></a></div>
+                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/icfnewmosqueviews/ICF_Musullah_SE.jpg"><img src="assets/img/icfnewmosqueviews/ICF_Musullah_SE.jpg" class="img-fluid" alt=""></a></div>
+                      <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/icfnewmosqueviews/ICF_Musullah_SW.jpg"><img src="assets/img/icfnewmosqueviews/ICF_Musullah_SW.jpg" class="img-fluid" alt=""></a></div>
+                  </div>
+                  <div class="swiper-pagination"></div>
               </div>
 
           </div>
